Changed menu icons
Changed menu icons, pictures and a few divs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width"> 
 	<title>Home</title>
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.jpg">
 	<link href='http://fonts.googleapis.com/css?family=Average+Sans|Jolly+Lodger' rel='stylesheet' type='text/css'>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
@@ -37,10 +37,10 @@
 		<nav>
 			<ul class="menu green">
 				<li class="active"><a href="index.html">Home<i class="fa fa-home"></i></a></li>
-				<li><a href="#">Get Started<i class="fa fa-book"></i></a></li>
-				<li><a href="#">Recources<i class="fa fa-music"></i></a></li>
-				<li><a href="#">About<i class="fa fa-headphones"></i></a></li>
-				<li><a href="#">Contact Us<i class="fa fa-comments-o"></i></a></li>
+				<li><a href="#">About<i class="fa fa-users"></i></a></li>
+				<li><a href="#">Resources<i class="fa fa-pagelines"></i></a></li>
+				<li><a href="#">Get Started<i class="fa fa-globe"></i></a></li>
+				<li><a href="#">Contact Us<i class="fa fa-comments"></i></a></li>
 			</ul>
 		</nav>
 		<ul id="socialMedia">
@@ -97,26 +97,30 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-6">
-					<img src="images/pic4.jpg" class="img-responsive" alt="Image">
+				<div class="col-sm-3">
+					<img src="images/bradley.jpg" class="img-responsive" alt="Image">
+				</div>
+				<div class="col-sm-3">
 					<h2>Bradley Richardson</h2>
-					<h3>CEO, Made-up Company</h3>
+					<h3>CEO, Clean to be Green</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis.</p>
 				</div>
-				<div class="col-sm-6">		
-						<img src="images/pic4.jpg" class="img-responsive" alt="Image">
-						<h2>Judi Walters</h2>
-						<h3>Homeowner, NY</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis.</p>
+				<div class="col-sm-3">		
+					<img src="images/judi.jpg" class="img-responsive" alt="Image">
+				</div>
+				<div class="col-sm-3">
+					<h2>Judi Walters</h2>
+					<h3>Homeowner, New York</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis.</p>
 				</div>			
 			</div>
 			<div class="row">
 				<div class="col-sm-12">      
-					<h1>Your greener future startes here</h1>
+					<h1>Your greener future starts here</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
 				</div>
