Added photos and a bit of text

--- a/index.html
+++ b/index.html
@@ -57,26 +57,25 @@
 			</div>  
 			<div class="row">
 				<div class="col-sm-4">
-					<h2>Green to green building?</h2>
-					<p><img src="images/pic1.jpg" alt="Image" class="img-responsive"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat.</p>
-					<a href="#" class="btn btn-success">Who we are</a>
+					<h2>The Team</h2>
+					<p><img src="images/team.jpg" alt="Image" class="img-responsive img-circle">We are group of like minded individuals who want to get the word out about green energy and how it effects you.</p>
+					<a href="about.html" class="btn btn-success">Meet Us</a>
 				</div>
+				
 				<div class="col-sm-4">
-					<h2>It is actually easy being green.</h2>
-					<p><img src="images/pic2.jpg" alt="Image" class="img-responsive"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h2>Green Initiatives per state</h2>
+					<p><img src="images/map.jpg" alt="Image" class="img-responsive img-circle img-thumbnail">In the US each state has numerous plants for producing various types of green renewable energy.</p>
+					<a href="#" class="btn btn-success">View map</a>
+	   			</div>
+	   			<div class="col-sm-4">
+					<h2>Where do I start?</h2>
+					<p><img src="images/home.png" alt="Image" class="img-responsive img-circle">We've brought together multiple resources that will aid you in unlocking the eco power of your home!</p>
 					<a href="#" class="btn btn-success">Get started</a>
 				</div>
-				<div class="col-sm-4">
-					<h2>Build greener, wherever you are.</h2>
-					<p><img src="images/pic3.jpg" alt="Image" class="img-responsive"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis.</p>
-					<a href="#" class="btn btn-success">View the map</a>
-	   			</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="images/pic5.jpg" alt="Image" class="img-responsive"> 
+					<img src="images/why.jpg" alt="Image" class="img-responsive img-circle"> 
 				</div>
 				<div class="col-sm-6">	
 					<h1>Why go green?</h1>
@@ -84,16 +83,14 @@
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis.</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis.</p>
+						tempor hubouyboj ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis.</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>   
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
 					<h2>Don't take our word for it.</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis.</p>
+					<p>Listen to some of our satisfied clientele.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -123,10 +120,11 @@
 					<h1>Your greener future starts here</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+					<a href="#" class="btn btn-success">Get started now</a>
 				</div>
 			</div>
 					<footer>
-						<p><a href="#" class="btn btn-success">Get started now</a> &copy; 2013, Sol 3 Tech  12777 N Rockwell Ave. Oklahoma City, OK 73162  1-888-123-4567</p>
+						<p> &copy; 2013, Sol 3 Tech  12777 N Rockwell Ave. Oklahoma City, OK 73162  1-888-123-4567</p>
 					</footer>
 	</div>				
 </body>
