--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 			<li class="facebook"><a href="https://www.facebook.com/wddatft" target=”_blank”><i class="fa fa-facebook fa-3x"></i></a></li>
 		</ul> 
 		<div class="logo">
-			<img src="images/logo.png" alt="logo" class="img-responsive">
-		</div> 
+			<a href="index.html"><img src="images/logo.png" alt="logo" class="img-responsive">
+		</div></a>
 			<div class="jumbotron">
 				<h1>A greener tomorrow, today </h1>
 				<a href="#" class="btn btn-success">Get started now!</a>
